cmake_minimum_required(VERSION 3.23)
project(dsproject)

set(CMAKE_CXX_STANDARD 14)

add_executable(dsproject
        cmake-build-debug/Testing/Temporary/LastTest.log
        cmake-build-debug/build.ninja
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        "final (1).cpp")
